--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,56 +3,102 @@
     padding: 0;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color: #E7E7E7;
+}
+
 .grid_container{
-    display: grid; 
+    display: grid;
     grid-template-areas: 
     "header header header"
     "aside main main"
     "aside main main"
     "footer footer footer";
+
 }
 
 .grid_container_mini{
     display: grid;
     grid-template-columns: 15% 15% 15%;
-    justify-content: space-around;
-    width: 100%
-}
-
-.grid_item_mini{
-    width: 200px;
-    height: 300px;
-    margin-top: 50px;
+    justify-content: space-evenly;
+    padding-top: 50px;
+    padding-bottom: 25px;
+    width: 78vw;
 }
 
 header{
     grid-area: header;
-    background-color: blue;
-    width: 100vw;
+    display: flex;
+    background-color: #25527B;
     height: 5vh;
+    align-items:center;
+    justify-content: center;
+}
 
-} 
+.header_title{
+    color: #ffffff;
+    font-size: 0.5rem;
+}
+
 aside{
     grid-area:aside;
-    background-color: yellow;
     width: 20vw;
-    height: 90vh;
 } 
 
 main{
     grid-area: main;
-    background-color: pink;
-    width: 80vw;
 }
 
 footer{
     grid-area: footer;
-    background-color: aqua;
-    width: 100vw;
     height: 5vh;
+    background-color: #ffffff;
 }
 
-.flex_container{
+.grid_item_mini{
+    margin-bottom: 25px;
+}
+
+/*PRINCIPIO EL CONTENEDOR DE PRODUCTOS (IMAGEN, TITULO, PRECIO, BOTÓN)*/
+.flex_container{ /*ENVUELTO POR GRID_ITEM_MINI*/
     display: flex;
+    flex-direction: column;
+    width: 300px;
+    background-color: #ffffff;
 }
 
+.flex_image{
+    width: 100%
+}
+
+.flex_item_text h2, p{
+    display: flex;
+    justify-content: center;
+}
+
+.flex_item_text h2{
+    margin-top: 10px;
+}
+
+.flex_item_text p{
+    margin: 10px;
+}
+
+
+.flex_button{
+    border-radius: 0%;
+    width: 100%;
+    height: 40px;
+    background-color: #25527B;
+}
+
+.flex_button a{
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 1.5rem;
+    color: #ffffff;
+}
+
+/*FIN DEL CONTENEDOR DE PRODUCTOS (IMAGEN, TITULO, PRECIO, BOTÓN)*/
